# portable_rez

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  build.bat  build.py  noxfile.py  pyoxidizer.bzl  pyproject.toml  requirements-dev.txt  setup.py
.github/workflows/: mr-test.yml  python-publish.yml
nox_actions/: codetest.py  lint.py  release.py  utils.py
portable_rez/: __main__.py
