[tool.poetry]
name = "portable-rez"
version = "0.2.0"
description = "Portable Rez"
authors = ["loonghao <hal.long@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.2.0"
tag_format = "v$version"
version_files = [
    "pyproject.toml:version",
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
